<resources>
    <string name="app_name">DogForAnyone</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="btn_link_to_signup">Don\'t have an account, Signup !!</string>
    <string name="navigation_drawe_open">Open navigation drawer</string>
    <string name="navigation_drawe_close">Close navigation drawer</string>

    <string name="imgDesc">Image Desc</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_as_dog_owner">SignUp As Dog Owner</string>
    <string name="signup_to_rent_a_dog">SignUp To rent a Dog</string>
    <string name="dog_for_anyone">Dog For Anyone</string>
    <string name="settings">Settings</string>
    <string name="customer_support">Customer Support</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="title_activity_complete_info">CompleteInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ownerpic">OwnerPic</string>
    <string name="book_now">Book Now</string>
</resources>